tests/errors/syn.missing-comma.struct-params.or
main :: () -> void {
    array_t :: struct(x: int;)
};
